--- a/index-normal.html
+++ b/index-normal.html
@@ -63,7 +63,7 @@
             <!-- NAME & STATUS -->
             <div class="text-holder text-center">
                 <h2> Annn    </h2>
-                <h6>Software Engineer & UI/UX Expert</h6>
+                <h6>Software Engineer & IT DESK HELP</h6>
             </div>
         </div>
     </div>
