--- a/index-normal.html
+++ b/index-normal.html
@@ -63,7 +63,7 @@
             <!-- NAME & STATUS -->
             <div class="text-holder text-center">
                 <h2> Annn    </h2>
-                <h6>Software Engineer & IT DESK HELP</h6>
+                <h6>Software Engineer & IT Desk Help</h6>
             </div>
         </div>
     </div>
@@ -150,7 +150,7 @@
                         <!-- NAME & STATUS -->
                         <div class="info-headings">
                             <h4 class="text-uppercase left">Annn    </h4>
-                            <h6 class="text-capitalize left">Software Engineer & UI/UX Expert</h6>
+                            <h6 class="text-capitalize left">Software Engineer & IT Desk Help</h6>
                         </div>
 
                         <!-- CONTACT INFO -->
