--- a/index-normal.html
+++ b/index-normal.html
@@ -158,7 +158,7 @@
                             <ul class="profile-list">
                                 <li class="clearfix">
                                     <span class="title"><i class="material-icons">email</i></span>
-                                    <span class="content">email@mailprovider.com</span>
+                                    <span class="content">hovanan1412@gmail.com</span>
                                 </li>
                                 <li class="clearfix">
                                     <span class="title"><i class="material-icons">language</i></span>
@@ -166,15 +166,15 @@
                                 </li>
                                 <li class="clearfix">
                                     <span class="title"><i class="fa fa-skype" aria-hidden="true"></i></span>
-                                    <span class="content">yourusername@skype.com</span>
+                                    <span class="content">Ânn@skype.com</span>
                                 </li>
                                 <li class="clearfix">
                                     <span class="title"><i class="material-icons">phone</i></span>
-                                    <span class="content">+152 25634 254 846</span>
+                                    <span class="content">+0886 777 505</span>
                                 </li>
                                 <li class="clearfix">
                                     <span class="title"><i class="material-icons">place</i></span>
-                                    <span class="content">LampStreet 34/3, London, UK</span>
+                                    <span class="content">Bình thạnh , HCM, VN</span>
                                 </li>
 
                             </ul>
@@ -224,7 +224,7 @@
                     <div class="card-content">
                         <!-- ABOUT PARAGRAPH -->
                         <p>
-                            Hello! I’m John Doe. Senior Web Developer with over 13 years of experience
+                            Hello! I’m An. Senior Web Developer with over 13 years of experience
                             specializing in front end development. Experienced with all stages of the
                             development cycle for dynamic web projects.Having an in-depth knowledge
                             including advanced HTML5, CSS, CSS3, SASS, LESS, JSON, XML, Java, JavaScript,
